--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,43 @@
-.venv/
-__pycache__/
+# -------------------
+# Node / React / Vite
+# -------------------
+node_modules/
+dist/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.vite
 *.log
-*.json
-.env
+
+# -------------------
+# Python / FastAPI
+# -------------------
+__pycache__/
+*.py[cod]
+*.sqlite3
+*.db
+*.log
+.venv/
+env/
+venv/
+.Python
+*.env
+
+# -------------------
+# OS / Misc
+# -------------------
+.DS_Store
+Thumbs.db
+
+# -------------------
+# VSCode / IDE
+# -------------------
+.vscode/
+.idea/
+*.swp
+
+# -------------------
+# Git
+# -------------------
+.git/
